Make use of scale and not fraction.